--- a/src/styles.css
+++ b/src/styles.css
@@ -206,9 +206,15 @@ nav a:hover {
 
 .switch input {
   opacity: 0;
-  width: 0;
-  height: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  cursor: pointer;
+  position: absolute;
+  left:0;
+  top:0;
 }
+
 
 .slider {
   position: absolute;
