--- a/src/styles.css
+++ b/src/styles.css
@@ -21,11 +21,14 @@ body {
 .header {
   margin-top: 50px;
 }
-
+.search-input-container{
+  display: flex;
+  justify-content: center
+}
 .search-input {
   padding: 15px;
   margin: 25px 10px;
-  width: 100%;
+  width: 80%;
   font-size: 16px;
   border-radius: 100px;
   border: 1px solid #ccc;
@@ -34,7 +37,7 @@ body {
 /* Genre and Filter Bar Styles */
 .filter-bar {
   display: flex;
-  justify-content: right;
+  justify-content: center;
 }
 
 .filter-slot {
